fix(workflow) : correction de la création des .exe